# gentzen

./: .ocamlformat  README.md  atp.opam  dune  dune-project  gentzen.opam
archive/lib/: dune-archive  proof.ml  utils.ml
archive/test/: apply_rule.ml  testing.ml  utils.ml
lib/: dune  lambda.ml  natural.ml  parser.ml  proof.ml  sequent.ml  sequent.mli  sequent2.ml  typing.ml  utils.ml
test/: apply_rule.ml  dune  testing.ml  utils.ml
