(lang dune 3.1)

(name gentzen)

(generate_opam_files true)

(source
 (github jinh0/gentzen))

(authors "Jinho Yoon")

(maintainers "Jinho Yoon")

(license LICENSE)

(documentation https://github.com/jinh0/gentzen)

(package
 (name gentzen)
 (synopsis "An automated theorem prover written in OCaml.")
 (description "")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
